--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "Simple tool to build your frontend.",
   "main": "bin/boer.js",
+  "bin": {
+    "boer": "bin/boer.js"
+  },
   "dependencies": {
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
