--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "slik": "bin/slik.js"
   },
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
-    "del": "^5.0.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.2.0",
     "gulp-imagemin": "^6.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "js-yaml": "^3.13.1",
     "yargs": "^14.0.0"
   },
