--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "chalk": "^2.4.2",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
@@ -21,6 +22,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.2.0",
     "js-yaml": "^3.13.1",
     "yargs": "^14.0.0"
   },
@@ -42,5 +44,8 @@
   "bugs": {
     "url": "https://github.com/MartijnCuppens/slik/issues"
   },
-  "homepage": "https://github.com/MartijnCuppens/slik#readme"
+  "homepage": "https://github.com/MartijnCuppens/slik#readme",
+  "xo": {
+    "space": true
+  }
 }
