--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildozer",
-  "version": "0.0.0-alpha",
+  "version": "0.0.0-alpha.1",
   "description": "Simple tool to build your frontend.",
   "main": "bin/buildozer.js",
   "bin": {
