--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
     "chalk": "^2.4.2",
     "copy": "^0.3.2",
     "cssnano": "^4.1.10",
