--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.2.0",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^6.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
