--- a/.buildozerrc
+++ b/.buildozerrc
@@ -17,3 +17,6 @@ svg-sprite:
   - src: img/sprite/*.svg
     name: sprite.svg
     dest: dest/img/sprite
+browsersync:
+  server: null # Static sites
+  proxy: null # Dynamic sites
