Fix npm command

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "test": "npm run lint && npm run test-1",
     "lint": "xo",
-    "test-1": "cd test/test1 && npm test"
+    "test-1": "cd test/test1 && node ../../bin/buildozer build"
   },
   "files": [
     "/lib",
