--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^3.0.0",
     "copy": "^0.3.2",
     "cssnano": "^4.1.10",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.2.0",
@@ -28,6 +29,7 @@
     "gulp-terser": "^1.2.0",
     "js-yaml": "^3.13.1",
     "merge-stream": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss-load-config": "^2.1.0",
     "rfs": "^9.0.0",
     "rimraf": "^3.0.0",
@@ -37,9 +39,10 @@
     "xo": "^0.25.3"
   },
   "scripts": {
-    "test": "npm run lint && npm run test-1",
+    "test": "npm run lint && npm-run-all test-* --parallel",
     "lint": "xo",
-    "test-1": "cd test/test1 && node ../../bin/buildozer build"
+    "test-1": "cd test/test1 && node ../../bin/buildozer build",
+    "test-2": "cd test/copy-test && node ../../bin/buildozer build"
   },
   "files": [
     "/lib",
