--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-load-config": "^2.1.0",
     "rfs": "^9.0.0",
-    "rimraf": "^3.0.0",
-    "yargs": "^15.0.1"
+    "rimraf": "^3.0.0"
   },
   "devDependencies": {
     "xo": "^0.25.3"
