--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "buildozer": "bin/buildozer.js"
   },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "autoprefixer": "^9.6.1",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
     "chalk": "^3.0.0",
-    "copy": "^0.3.2",
+    "copyfiles": "^2.1.1",
     "cssnano": "^4.1.10",
     "fancy-log": "^1.3.3",
+    "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.2.0",
@@ -28,20 +29,22 @@
     "gulp-svg-sprite": "^1.5.0",
     "gulp-terser": "^1.2.0",
     "js-yaml": "^3.13.1",
-    "merge-stream": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-load-config": "^2.1.0",
     "rfs": "^9.0.0",
     "rimraf": "^3.0.0"
   },
   "devDependencies": {
+    "postcss-pxtorem": "^4.0.1",
     "xo": "^0.25.3"
   },
   "scripts": {
-    "test": "npm run lint && npm-run-all test-* --parallel",
+    "test": "npm-run-all lint tests",
+    "tests": "npm-run-all test-* --parallel",
     "lint": "xo",
-    "test-1": "cd test/test1 && node ../../bin/buildozer build",
-    "test-2": "cd test/copy-test && node ../../bin/buildozer build"
+    "test-default": "cd test/default && node ../../bin/buildozer build",
+    "test-copy": "cd test/copy && node ../../bin/buildozer build",
+    "test-2": "cd test/config-search && node ../../bin/buildozer build"
   },
   "files": [
     "/lib",
