--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "copyfiles": "^2.1.1",
     "cssnano": "^4.1.10",
     "fancy-log": "^1.3.3",
+    "fibers": "^4.0.2",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -32,7 +33,8 @@
     "npm-run-all": "^4.1.5",
     "postcss-load-config": "^2.1.0",
     "rfs": "^9.0.0",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "sass": "^1.25.0"
   },
   "devDependencies": {
     "postcss-pxtorem": "^4.0.1",
@@ -44,6 +46,7 @@
     "lint": "xo",
     "test-default": "cd test/default && node ../../bin/buildozer build",
     "test-copy": "cd test/copy && node ../../bin/buildozer build",
+    "test-sass-module": "cd test/sass-module && node ../../bin/buildozer build",
     "test-2": "cd test/config-search && node ../../bin/buildozer build"
   },
   "files": [
