--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.26.7",
     "chalk": "^3.0.0",
     "copyfiles": "^2.1.1",
+    "cosmiconfig": "^6.0.0",
     "cssnano": "^4.1.10",
     "fancy-log": "^1.3.3",
     "fibers": "^4.0.2",
@@ -29,7 +30,6 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-terser": "^1.2.0",
-    "js-yaml": "^3.13.1",
     "postcss-load-config": "^2.1.0",
     "rfs": "^9.0.0",
     "rimraf": "^3.0.0",
@@ -51,8 +51,7 @@
   },
   "files": [
     "/lib",
-    "gulpfile.js",
-    ".buildozerrc"
+    "gulpfile.js"
   ],
   "engines": {
     "node": ">=8"
