--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-cli": "^2.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
@@ -36,7 +37,8 @@
     "rfs": "^9.0.0",
     "rimraf": "^3.0.0",
     "sass": "^1.25.0",
-    "stylelint": "^13.0.0"
+    "stylelint": "^13.0.0",
+    "through2": "^3.0.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
