--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildozer",
-  "version": "0.3.1",
+  "version": "0.3.0",
   "description": "Simple tool to build your frontend.",
   "main": "bin/buildozer.js",
   "bin": {
@@ -38,7 +38,8 @@
     "rimraf": "^3.0.0",
     "sass": "^1.25.0",
     "stylelint": "^13.0.0",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "update-notifier": "^4.0.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
