Switch environment with env parameter

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "unit-tests": "npm-run-all test-* --parallel",
     "lint": "xo",
     "test-default": "cd test/default && node ../../bin/buildozer build",
+    "test-env": "cd test/env && node ../../bin/buildozer build --env=development",
     "test-copy": "cd test/copy && node ../../bin/buildozer build",
     "test-sass-module": "cd test/sass-module && node ../../bin/buildozer build",
     "test-config-search": "cd test/config-search && node ../../bin/buildozer build",
