--- a/lib/.buildozerrc
+++ b/lib/.buildozerrc
@@ -1,35 +1,35 @@
 version: 0.4.0
 src_base_path: ./
 dest_base_path: ./
-scss:
-  - src: scss/**/*.css
-    dest: dest/css
-  - src: scss/**/*.scss
-    dest: dest/css
-  - src: scss/**/*.sass
-    dest: dest/css
+css:
+  - src: css/**/*.css
+    dest: dist/css
+  - src: css/**/*.scss
+    dest: dist/css
+  - src: css/**/*.sass
+    dest: dist/css
 img:
   - src: img/**/*.png
-    dest: dest/img
+    dest: dist/img
   - src: img/**/*.jpg
-    dest: dest/img
+    dest: dist/img
   - src: img/**/*.jpeg
-    dest: dest/img
+    dest: dist/img
   - src: img/**/*.gif
-    dest: dest/img
+    dest: dist/img
   - src: img/**/*.svg
-    dest: dest/img
+    dest: dist/img
 js:
   - src: js/**/*.js
-    dest: dest/js
+    dest: dist/js
 js-concat:
   - src: js/concat/*.js
     name: all.js
-    dest: dest/js
+    dest: dist/js
 svg-sprite:
   - src: img/sprite/*.svg
     name: sprite.svg
-    dest: dest/img/sprite
+    dest: dist/img/sprite
 browsersync:
   server: null # Static sites
   proxy: null # Dynamic sites
