--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "chalk": "^3.0.0",
     "copyfiles": "^2.1.1",
     "cosmiconfig": "^6.0.0",
-    "cssnano": "^4.1.10",
     "fancy-log": "^1.3.3",
     "fibers": "^4.0.2",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-cli": "^2.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
