Allow cwd to be passed and update tests

--- a/package.json
+++ b/package.json
@@ -49,17 +49,17 @@
     "test": "npm-run-all lint unit-tests",
     "unit-tests": "npm-run-all test-* --parallel",
     "lint": "xo",
-    "test-default": "cd test/default && node ../../bin/buildozer build",
-    "test-css": "cd test/css && node ../../bin/buildozer build",
-    "test-env": "cd test/env && node ../../bin/buildozer build --env=development",
-    "test-copy": "cd test/copy && node ../../bin/buildozer build",
-    "test-sass-module": "cd test/sass-module && node ../../bin/buildozer build",
-    "test-config-search": "cd test/config-search && node ../../bin/buildozer build",
-    "test-stylelint": "cd test/stylelint && node ../../bin/buildozer build",
-    "test-eslint": "cd test/eslint && node ../../bin/buildozer build",
+    "test-default": "node bin/buildozer build --cwd=./test/default",
+    "test-css": "node bin/buildozer build --cwd=test/css",
+    "test-autoprefixer": "node bin/buildozer build --disable-autoprefixer --cwd=test/autoprefixer",
+    "test-env": "node bin/buildozer build --env=development --cwd=test/env",
+    "test-copy": "node bin/buildozer build --cwd=test/copy",
+    "test-sass-module": "node bin/buildozer build --cwd=test/sass-module",
+    "test-config-search": "node bin/buildozer build --cwd=test/config-search",
+    "test-stylelint": "node bin/buildozer build --cwd=test/stylelint",
+    "test-eslint": "node bin/buildozer build --cwd=test/eslint",
     "test-fails": "node test/fail-tests.js",
     "test-version-check": "node test/version-check.js",
-    "fail-stylelint": "cd test/fail-stylelint && node ../../bin/buildozer build",
     "diff-check": "node test/check-diff.js"
   },
   "files": [
