--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^13.0.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-terser": "^1.2.0",
+    "plugin-error": "^1.0.1",
     "postcss-load-config": "^2.1.0",
     "rimraf": "^3.0.2",
     "sass": "^1.26.2",
     "stylelint": "^13.2.1",
     "through2": "^3.0.1",
-    "update-notifier": "^4.1.0"
+    "update-notifier": "^4.1.0",
+    "vinyl-sourcemaps-apply": "^0.2.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
