--- a/package.json
+++ b/package.json
@@ -42,8 +42,14 @@
     "vinyl-sourcemaps-apply": "^0.2.1"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "rfs": "^9.0.3",
+    "rollup": "^2.10.7",
+    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-terser": "^5.3.0",
     "xo": "^0.30.0"
   },
   "scripts": {
@@ -60,6 +66,7 @@
     "test-config-search": "node bin/buildozer build --cwd=test/config-search",
     "test-stylelint": "node bin/buildozer build --cwd=test/stylelint",
     "test-eslint": "node bin/buildozer build --cwd=test/eslint",
+    "test-js": "node bin/buildozer build --cwd=test/js",
     "test-fails": "node test/fail-tests.js",
     "diff-check": "node test/check-diff.js"
   },
