--- a/test/js/.buildozerrc
+++ b/test/js/.buildozerrc
@@ -2,9 +2,16 @@ src_base_path: ./
 dest_base_path: ./
 img: []
 js:
-  - src: js/index.js
+  - src:
+    - js/index.js
+    - js/b.js
     dest: dist/js
-js-concat: []
+  - src: js/c.js
+    dest: dist/js/c
+js-concat:
+  - src: js/concat/*.js
+    name: all.js
+    dest: dist/js/concat
 svg-sprite: []
 browsersync:
   server: null # Static sites
