--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "stylelint": "^13.6.1",
     "through2": "^4.0.2",
     "update-notifier": "^4.1.0",
-    "vinyl-sourcemaps-apply": "^0.2.1"
+    "vinyl-sourcemaps-apply": "^0.2.1",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
