--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sass": "^1.26.10",
     "stylelint": "^13.7.0",
     "through2": "^4.0.2",
-    "update-notifier": "^4.1.1"
+    "update-notifier": "^4.1.1",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
