--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "buildozer": "bin/buildozer.js"
   },
   "dependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
-    "browser-sync": "^2.26.12",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.1",
+    "browser-sync": "^2.26.13",
     "chalk": "^4.1.0",
-    "copyfiles": "^2.3.0",
+    "copyfiles": "^2.4.0",
     "cosmiconfig": "^7.0.0",
     "fancy-log": "^1.3.3",
     "fibers": "^5.0.0",
@@ -27,25 +27,26 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-stylelint": "^13.0.0",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-terser": "^1.3.2",
+    "gulp-terser": "^1.4.0",
     "plugin-error": "^1.0.1",
-    "postcss-load-config": "^2.1.0",
+    "postcss": "^8.1.4",
+    "postcss-load-config": "^3.0.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.10",
-    "stylelint": "^13.6.1",
+    "sass": "^1.27.0",
+    "stylelint": "^13.7.2",
     "through2": "^4.0.2",
-    "update-notifier": "^4.1.0",
+    "update-notifier": "^5.0.0",
     "vinyl-sourcemaps-apply": "^0.2.1",
-    "yargs": "^15.4.1"
+    "yargs": "^16.1.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "rfs": "^9.0.3",
-    "xo": "^0.32.1"
+    "xo": "^0.34.1"
   },
   "scripts": {
     "test": "npm-run-all lint unit-tests",
