--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - name: Set Node.js version
-        uses: actions/setup-node@v1.1.0
+        uses: actions/setup-node@v2
         with:
           version: ${{ matrix.node }}
 
