--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-stylelint": "^13.0.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-terser": "^2.0.0",
+    "hasha": "^5.2.2",
     "plugin-error": "^1.0.1",
     "postcss": "^8.2.1",
     "postcss-load-config": "^3.0.0",
