--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "buildozer": "bin/buildozer.js"
   },
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "autoprefixer": "^9.8.6",
-    "browser-sync": "^2.26.12",
-    "chalk": "^4.1.0",
-    "copyfiles": "^2.3.0",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "autoprefixer": "^10.2.5",
+    "browser-sync": "^2.26.14",
+    "chalk": "^4.1.1",
+    "copyfiles": "^2.4.1",
     "cosmiconfig": "^7.0.0",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.2",
     "fancy-log": "^1.3.3",
     "fibers": "^5.0.0",
-    "glob": "^7.1.6",
+    "glob": "^7.1.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.3.0",
@@ -27,25 +27,26 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint": "^13.0.0",
     "gulp-svg-sprite": "^1.5.0",
-    "gulp-terser": "^1.4.0",
-    "postcss-load-config": "^2.1.0",
+    "gulp-terser": "^2.0.1",
+    "postcss": "^8.2.15",
+    "postcss-load-config": "^3.0.1",
     "rfs": "^9.0.3",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.10",
-    "stylelint": "^13.7.0",
+    "sass": "^1.32.12",
+    "stylelint": "^13.13.1",
     "through2": "^4.0.2",
-    "update-notifier": "^4.1.1",
-    "yargs": "^15.4.1"
+    "update-notifier": "^5.1.0",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "postcss-pxtorem": "^5.1.1",
-    "xo": "^0.33.1"
+    "postcss-pxtorem": "^6.0.0",
+    "xo": "^0.39.1"
   },
   "scripts": {
     "test": "npm-run-all lint unit-tests",
