--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "copyfiles": "^2.4.1",
     "cosmiconfig": "^7.0.0",
     "fancy-log": "^1.3.3",
-    "fibers": "^5.0.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -42,6 +41,9 @@
     "update-notifier": "^5.1.0",
     "vinyl-sourcemaps-apply": "^0.2.1",
     "yargs": "^16.2.0"
+  },
+  "optionalDependencies": {
+    "fibers": "^5.0.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
