--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,14 +9,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [8, 10, 12]
+        node: [8, 10, 12, 14, 16]
 
     steps:
       - name: Clone repository
         uses: actions/checkout@master
 
       - name: Set Node.js version
-        uses: actions/setup-node@v1.1.0
+        uses: actions/setup-node@v2
         with:
           version: ${{ matrix.node }}
 
