--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "rfs": "^9.0.6",
-    "xo": "^0.39.1"
+    "xo": "^0.39.1",
+    "trim-newlines": "^3.0.1"
   },
   "scripts": {
     "test": "npm-run-all lint unit-tests",
